--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: kde-sc-dev-latest (>= 4:4.7.2),
  cmake, debhelper (>= 7.3.16), pkg-kde-tools (>= 0.12),
  kdelibs5-dev (>= 4:4.7),
 Standards-Version: 3.9.2
-Homepage: http://edu.kde.org/
+Homepage: https://projects.kde.org/projects/kde/kdegraphics/svgpart
 Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-sc/svgpart.git
 Vcs-Git: git://git.debian.org/pkg-kde/kde-sc/svgpart.git
 
