--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Build-Depends: kde-sc-dev-latest (>= 4:4.10.1),
  kdelibs5-dev (>= 4:4.10)
 Standards-Version: 3.9.4
 Homepage: https://projects.kde.org/projects/kde/kdegraphics/svgpart
-Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-sc/svgpart.git
-Vcs-Git: git://git.debian.org/pkg-kde/kde-sc/svgpart.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/svgpart.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/svgpart.git
 
 Package: svgpart
 Architecture: any
