--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: svgpart
 Section: kde
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
-Uploaders: Pino Toscano <pino@debian.org>, Eshat Cakar <info@eshat.de>
+Uploaders: Pino Toscano <pino@debian.org>, Eshat Cakar <info@eshat.de>,
+           Maximiliano Curia <maxy@debian.org>
 Build-Depends: kde-sc-dev-latest (>= 4:4.10.1),
  cmake, debhelper (>= 9), pkg-kde-tools (>= 0.12),
  kdelibs5-dev (>= 4:4.10)
