--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,11 @@ Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Pino Toscano <pino@debian.org>,
            Eshat Cakar <info@eshat.de>,
            Maximiliano Curia <maxy@debian.org>
-Build-Depends: kde-sc-dev-latest (>= 4:4.11),
- cmake, debhelper (>= 9), pkg-kde-tools (>= 0.12),
- kdelibs5-dev (>= 4:4.11)
+Build-Depends: cmake,
+               debhelper (>= 9),
+               kde-sc-dev-latest (>= 4:4.11),
+               kdelibs5-dev (>= 4:4.11),
+               pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/kde/kdegraphics/svgpart
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/svgpart.git
@@ -16,7 +18,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/svgpart.git
 Package: svgpart
 Architecture: any
 Section: graphics
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Breaks: gwenview (<< 4:4.7.0)
 Replaces: gwenview (<< 4:4.7.0)
 Description: KDE SVG KPart
