--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: svgpart
 Section: kde
 Priority: optional
-Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
+Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Pino Toscano <pino@debian.org>,
            Eshat Cakar <info@eshat.de>,
            Maximiliano Curia <maxy@debian.org>
@@ -12,8 +12,8 @@ Build-Depends: cmake,
                pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/kde/kdegraphics/svgpart
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/svgpart.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/svgpart.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-applications/svgpart.git/
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/svgpart.git
 
 Package: svgpart
 Architecture: any
