--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Build-Depends: cmake (>= 2.8.9~),
                pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/kde/kdegraphics/svgpart
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/svgpart.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/svgpart.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/kde-sc/svgpart.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/kde-sc/svgpart.git
 
 Package: svgpart
 Architecture: any
